v1.2.6 (????-??-??)
===================

Bug fixes
---------

- Changing variable appearing in "source" statement of a base template
  from the derived target now works as expected.
- Simplify paths involving $(builddir) in the "gnu" toolset output.


v1.2.5 (2014-07-28)
===================

New Features
------------

- Support "config" variable for choosing debug/release configuration in
  "gnu" toolset.
- Support "builddir" variable in "gnu" toolset for out of source builds.
- Allow specifying "outputs" property for the actions in makefiles.
- Allow using settings with MSVS toolsets.
- Generate makefiles which don't allow creation of shared libraries or
  loadable modules with undefined symbols.

Bug fixes
---------

- Don't define _USRDLL unnecessarily in the generated MSVS projects.
- Use correct (-Kpic) flag with Sun cc C compiler instead of wrong "-pic".

Other Changes
-------------

- Include ANTLR 3.5.1 binaries in the source tree to make Bakefile build out
  of the box without any extra dependencies.